Ajustes no html - linha de código para js e css

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 body {
   font-family: "Roboto Mono", monospace;
   min-height: 400px;
-  background-image: url("https://img.freepik.com/free-photo/old-black-background-grunge-texture-dark-wallpaper-blackboard-chalkboard-room-wall_1258-28312.jpg?w=1480&t=st=1663123288~exp=1663123888~hmac=7b43a0ebfc06d7a6f865cc031d1648e9ecf16b504e1cac546a1d5419485bbcbf");
-  background-color: #111;
+  background-image: url();
+  background-color: #2A363B;
   background-size: 100%;
   background-position: center;
   background-repeat: repeat;
